# AOC-2024

./: .gitignore  CMakeLists.txt  LICENSE
data/: d2p2-custom-large-test.txt
src/: Day01.h  Day02.h  Day03.h  Day04.h  Day05.h  main.cpp
src/aoc/: AocExceptions.h  AocTemplates.h  Profiler.h
test/: Day01Test.cpp  Day02Test.cpp  Day03Test.cpp  Day04Test.cpp  Day05Test.cpp
